# HaXml

./: .hlint.yaml  Build.bat  COPYRIGHT  Changelog.md  HaXml-darcs.cabal  HaXml.cabal  Makefile  Makefile.inc  README  Setup.description  configure  rpm.spec  stack-lts12.yaml
.github/workflows/: build.yml
bugs/: DTD_gdxl.hs  DTD_norback.hs  Felgenhauer-use.hs  Felgenhauer.dtd  erik.hs  log  malc.hs
bugs/panitz/: XmlLex.hs
docs/: Combinators.html  Haskell2Xml.html  Xml2Haskell.html  XmlContent.html  XmlLib.html  Xtract.html  changelog.html  developerworks.patch  index.html  migrate.html
docs/HaXml/: Text.XML.HaXml.Lex.html  Text.XML.HaXml.Types.html  Text.XML.HaXml.Xtract.Combinators.html  Text.XML.HaXml.Xtract.Parse.html  Text.XML.HaXml.html  doc-index-vD.html  doc-index-vX.html
examples/: AlbumDTD.hs  App.hs  Canonicalise.hs  DTDpp.hs  DTypes.hs  DebugLex.hs  Example.hs  README  SimpleTest.hs  SimpleTestBool.hs  SimpleTestD.hs  Types.hs
examples/OpenOffice.org/: meta.mod  office2.dtd
examples/SMIL/: DTD_SMIL20.hs
lib/: ExitFailure.hs  Haskell2Xml.hs  IsPrefixOf.hs  IsSuffixOf.hs  ParseSTLib.hs  Pretty.lhs  SymTab.hs  Xml2Haskell.hs  XmlCombinators.hs  XmlHtmlGen.hs  XmlHtmlPP.hs  XmlHtmlParse.hs  XmlLex.hs  XmlLib.hs  XmlPP.hs  XmlParse.hs  XmlTypes.hs  XmlValidate.hs  patch
src/: GenTest.hs  Makefile  Makefile.nhc98  pkg.conf
src/Text/: UTF8.hs
src/tools/: Canonicalise.hs  CanonicaliseLazy.hs  DtdToHaskell.hs  DtdToTypeDefPP.20000221-1530  DtdToTypeDefPP.20000222-1210  DtdToTypeDefPP.hs  FpMLToHaskell.hs  FpMLinfo.hs  MkOneOf.hs  (+9 more)
tests/: TestXml.hs
(+87 files in other folders)
